// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Tabs /> > should allow id overriding 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_alignItems_center_mobile__onxwjukk TabList_styledTabList__1cu98lp0 TabList_styledTabList_appearance_underlined__1cu98lp1"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33"
    >
      <div
        aria-orientation="horizontal"
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_width_full_mobile__onxwjufs sprinkles_flexWrap_nowrap_mobile__onxwjupo reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_color_neutral__onxwju6t typography_typographyStyles__yhjp330 typography_typographyStyles_noWrap_true__yhjp332"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1 Tab_styledTab_active_true__11wt3mu3 Tab_styledTab_compound_0__11wt3mu4"
          data-controls="tab-1-title-0"
          role="tab"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 1 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="tab-2-title-1"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 2 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="tab-3-title-2"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 3 title
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs sprinkles_paddingTop_6_mobile__onxwjuvs sprinkles_paddingBottom_6_mobile__onxwjusg TabPanes_root__15xyz920"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs TabPane_root__1e18dwc0"
      id="tab-1-title-0"
      role="tabpanel"
      tabindex="0"
    >
      <input
        data-testid="checkbox-tab-1-title-0"
        type="checkbox"
      />
      tab 1 content
    </div>
    <div
      aria-hidden="true"
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_width_full_mobile__onxwjufs TabPane_root__1e18dwc0"
      id="tab-2-title-1"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_width_full_mobile__onxwjufs TabPane_root__1e18dwc0"
      id="tab-3-title-2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`<Tabs /> > should allow rendering indications 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_alignItems_center_mobile__onxwjukk TabList_styledTabList__1cu98lp0 TabList_styledTabList_appearance_underlined__1cu98lp1"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33"
    >
      <div
        aria-orientation="horizontal"
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_width_full_mobile__onxwjufs sprinkles_flexWrap_nowrap_mobile__onxwjupo reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_color_neutral__onxwju6t typography_typographyStyles__yhjp330 typography_typographyStyles_noWrap_true__yhjp332"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1 Tab_styledTab_active_true__11wt3mu3 Tab_styledTab_compound_0__11wt3mu4"
          data-controls="od-11-0-tab"
          role="tab"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_position_relative_mobile__onxwju98 sprinkles_alignItems_center_mobile__onxwjukk sprinkles_flexDirection_row_mobile__onxwjuok sprinkles_flexWrap_nowrap_mobile__onxwjupo sprinkles_justifyContent_center_mobile__onxwjulc useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxw4 useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm24"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_alignItems_center_mobile__onxwjukk sprinkles_flexDirection_row_mobile__onxwjuok sprinkles_flexWrap_nowrap_mobile__onxwjupo sprinkles_paddingTop_2_mobile__onxwjuvc sprinkles_paddingLeft_2_mobile__onxwjut4"
            >
              <span
                class="Tab_item__11wt3mu6"
              >
                tab 1 title
              </span>
            </div>
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_alignItems_center_mobile__onxwjukk sprinkles_flexDirection_row_mobile__onxwjuok sprinkles_flexWrap_nowrap_mobile__onxwjupo sprinkles_paddingTop_2_mobile__onxwjuvc sprinkles_paddingLeft_2_mobile__onxwjut4"
            >
              <span
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju74 sprinkles_textAlign_center_mobile__onxwju9s useTextStyles_root__1xnpmd70 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_sizes_2__1xnpmd72 Tab_indication__11wt3mu7 Tab_indication_appearance_underlined__11wt3mu8 Tab_indication_active_true__11wt3mua Tab_indication_compound_0__11wt3mub"
              >
                5
              </span>
            </div>
          </div>
        </button>
        <button
          aria-selected="false"
          class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-11-1-tab"
          role="tab"
          tabindex="-1"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_position_relative_mobile__onxwju98 sprinkles_alignItems_center_mobile__onxwjukk sprinkles_flexDirection_row_mobile__onxwjuok sprinkles_flexWrap_nowrap_mobile__onxwjupo sprinkles_justifyContent_center_mobile__onxwjulc useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxw4 useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm24"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_alignItems_center_mobile__onxwjukk sprinkles_flexDirection_row_mobile__onxwjuok sprinkles_flexWrap_nowrap_mobile__onxwjupo sprinkles_paddingTop_2_mobile__onxwjuvc sprinkles_paddingLeft_2_mobile__onxwjut4"
            >
              <span
                class="Tab_item__11wt3mu6"
              >
                tab 2 title
              </span>
            </div>
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_alignItems_center_mobile__onxwjukk sprinkles_flexDirection_row_mobile__onxwjuok sprinkles_flexWrap_nowrap_mobile__onxwjupo sprinkles_paddingTop_2_mobile__onxwjuvc sprinkles_paddingLeft_2_mobile__onxwjut4"
            >
              <span
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju74 sprinkles_textAlign_center_mobile__onxwju9s useTextStyles_root__1xnpmd70 useTextStyles_colours_dark__1xnpmd7f useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_sizes_2__1xnpmd72 Tab_indication__11wt3mu7 Tab_indication_appearance_underlined__11wt3mu8"
              >
                5
              </span>
            </div>
          </div>
        </button>
        <button
          aria-selected="false"
          class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-11-2-tab"
          role="tab"
          tabindex="-1"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_position_relative_mobile__onxwju98 sprinkles_alignItems_center_mobile__onxwjukk sprinkles_flexDirection_row_mobile__onxwjuok sprinkles_flexWrap_nowrap_mobile__onxwjupo sprinkles_justifyContent_center_mobile__onxwjulc useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxw4 useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm24"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_alignItems_center_mobile__onxwjukk sprinkles_flexDirection_row_mobile__onxwjuok sprinkles_flexWrap_nowrap_mobile__onxwjupo sprinkles_paddingTop_2_mobile__onxwjuvc sprinkles_paddingLeft_2_mobile__onxwjut4"
            >
              <span
                class="Tab_item__11wt3mu6"
              >
                tab 3 title
              </span>
            </div>
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_alignItems_center_mobile__onxwjukk sprinkles_flexDirection_row_mobile__onxwjuok sprinkles_flexWrap_nowrap_mobile__onxwjupo sprinkles_paddingTop_2_mobile__onxwjuvc sprinkles_paddingLeft_2_mobile__onxwjut4"
            >
              <span
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju74 sprinkles_textAlign_center_mobile__onxwju9s useTextStyles_root__1xnpmd70 useTextStyles_colours_dark__1xnpmd7f useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_sizes_2__1xnpmd72 Tab_indication__11wt3mu7 Tab_indication_appearance_underlined__11wt3mu8"
              >
                5
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs sprinkles_paddingTop_6_mobile__onxwjuvs sprinkles_paddingBottom_6_mobile__onxwjusg TabPanes_root__15xyz920"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs TabPane_root__1e18dwc0"
      id="od-11-0-tab"
      role="tabpanel"
      tabindex="0"
    >
      <input
        data-testid="checkbox-null"
        type="checkbox"
      />
      tab 1 content
    </div>
    <div
      aria-hidden="true"
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_width_full_mobile__onxwjufs TabPane_root__1e18dwc0"
      id="od-11-1-tab"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_width_full_mobile__onxwjufs TabPane_root__1e18dwc0"
      id="od-11-2-tab"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`<Tabs /> > should match snapshot (high level) 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_alignItems_center_mobile__onxwjukk TabList_styledTabList__1cu98lp0 TabList_styledTabList_appearance_underlined__1cu98lp1"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33"
    >
      <div
        aria-orientation="horizontal"
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_width_full_mobile__onxwjufs sprinkles_flexWrap_nowrap_mobile__onxwjupo reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_color_neutral__onxwju6t typography_typographyStyles__yhjp330 typography_typographyStyles_noWrap_true__yhjp332"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1 Tab_styledTab_active_true__11wt3mu3 Tab_styledTab_compound_0__11wt3mu4"
          data-controls="od-1-0-tab"
          role="tab"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 1 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-1-1-tab"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 2 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-1-2-tab"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 3 title
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs sprinkles_paddingTop_6_mobile__onxwjuvs sprinkles_paddingBottom_6_mobile__onxwjusg TabPanes_root__15xyz920"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs TabPane_root__1e18dwc0"
      id="od-1-0-tab"
      role="tabpanel"
      tabindex="0"
    >
      <input
        data-testid="checkbox-null"
        type="checkbox"
      />
      tab 1 content
    </div>
    <div
      aria-hidden="true"
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_width_full_mobile__onxwjufs TabPane_root__1e18dwc0"
      id="od-1-1-tab"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_width_full_mobile__onxwjufs TabPane_root__1e18dwc0"
      id="od-1-2-tab"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
